<resources>
    <string name="app_name">FFmpegRecorder</string>
    <string name="reset">Reset</string>
    <string name="switch_camera">Switch</string>
    <string name="flash_camera">Flash</string>
    <string name="pause">Pause</string>
    <string name="resume">Start</string>
    <string name="done">Done</string>
    <string name="video_path">Video path:</string>
    <string name="video_too_short">Video is too short.</string>
    <string name="initiating">Initiating…</string>
    <string name="processing">Processing…</string>
    <string name="please_wait">Please wait</string>
    <string name="permissions_denied_exit">Permissions denied, exit.</string>
    <string name="prefs_deltaTimeKey">pref_FrameDeltaTime</string>
    <string name="prefs_deltaTime">Frames frequency</string>
    <string name="prefs_deltaTimeDesc">Set frames frequency</string>
    <string name="prefs_Time5">5</string>
</resources>
