<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FFmpegRecordActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/reset"
                android:visibility="invisible"
                android:textSize="14sp"/>


            <Button
                android:id="@+id/btn_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/flash_camera"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/switch_camera"
                android:textSize="14sp"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footerView"
        android:layout_below="@+id/headerView"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.crazyorr.ffmpegrecorder.FixedRatioCroppedTextureView
                android:id="@+id/camera_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15"
            android:layout_marginTop="20dp"
            android:id="@+id/seekBar"
            android:maxHeight="40dp"
            android:minHeight="40dp"
            android:thumbOffset="18dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_flash_off_24"
                android:layout_gravity="center"/>


            <Button
                android:layout_marginStart="10dp"
                android:id="@+id/btn_resume_or_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resume" />

            <Button
                android:id="@+id/btn_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
